--- a/.gitconfig
+++ b/.gitconfig
@@ -1,8 +1,8 @@
 [user]
-  name = Jeff Geerling
-  email = geerlingguy@mac.com
+  name = Mark Stallone
+  email = m.stallone@yahoo.com
 [core]
-  editor = vi
+  editor = nano
   excludesfile = ~/.gitignore
   autocrlf = input
 [color]
@@ -13,7 +13,7 @@
 [init]
   defaultBranch = master
 [web]
-  browser = google-chrome
+  browser = brave-browser
 [credential]
   helper = osxkeychain
 [push]
